# android_battery_check

./: .gitignore  CMakeLists.txt  Makefile  README.md  android_battery_check.sln  android_battery_check.vcxproj  android_battery_check.vcxproj.filters  cmd.cpp  cmd.h  main.cpp
src/: main.cpp  parser.cpp  parser.h  version.h.in
